docs: document generate token with swagger
