# docs/swagger.yaml
@@ -9,6 +9,18 @@ definitions:
       password:
         type: string
     type: object
+  dto.GetJwtInput:
+    properties:
+      email:
+        type: string
+      password:
+        type: string
+    type: object
+  dto.GetJwtOutput:
+    properties:
+      access_token:
+        type: string
+    type: object
   entity.User:
     properties:
       email:
@@ -56,6 +68,32 @@ paths:
         "500":
           description: Internal Server Error
       summary: Create a user
+      tags:
+      - users
+  /users/generate-token:
+    post:
+      consumes:
+      - application/json
+      description: Get a user token
+      parameters:
+      - description: Get user token request
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/dto.GetJwtInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.GetJwtOutput'
+        "400":
+          description: Bad Request
+        "500":
+          description: Internal Server Error
+      summary: Get a user token
       tags:
       - users
 securityDefinitions:
